--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_resources">干货</string>
+    <string name="action_messages">杂谈</string>
+    <string name="action_topic">话题</string>
+    <string name="action_made">箫制作</string>
+    <string name="action_about">关于</string>
+    <string name="action_my">我的</string>
 </resources>
