--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="action_made">箫制作</string>
     <string name="action_about">关于</string>
     <string name="action_my">我的</string>
+
+    <string name="synthesis_fragment">杂谈</string>
 </resources>
